vlozeni polozek do skladu

--- a/app/UI/ItemsInWarehouse/default.latte
+++ b/app/UI/ItemsInWarehouse/default.latte
@@ -71,6 +71,8 @@
         </table>
     </form>
 {/if}
+<br/>
+<a n:href="Home:default"><button type="button">Domů</button></a>
 
 <script>
     $(function() {
