--- a/app/UI/ItemsList/default.latte
+++ b/app/UI/ItemsList/default.latte
@@ -50,7 +50,8 @@
 
 <h4>Vytvořit novou položku</h4>
 {control createItem}
-
+<br/>
+<a n:href="Home:default"><button type="button">Domů</button></a>
 {/block}
 
 {block moreScripts}
