--- a/app/UI/form_helper.latte
+++ b/app/UI/form_helper.latte
@@ -11,7 +11,8 @@
 {* predavane promenne: className(string), itemId(int), itemName(string) *}
 {block rename_form}
     <div class="rename_{$className} hidden" id="rename_div_{$itemId}">
-        <form n:name=rename{$className|firstUpper} class="rename_{$className}_form">
+        {var $formName = 'rename' . ucfirst($className)}
+        <form n:name=$formName class="rename_{$className}_form">
             <input n:name=name value="{$itemName}" />
             <input n:name=id value="{$itemId}" />
             <input n:name=sent />
