--- a/app/UI/filters_for_table.latte
+++ b/app/UI/filters_for_table.latte
@@ -1,4 +1,4 @@
-{* volano vlokem filters, ktery mu predava array filter *}
+{* volano blokem filters, ktery mu predava array filter *}
 {define sortable_buttons $filter}
 {if $filter['sortable']}
     {var $filter_name = $filter['name']}
