--- a/app/UI/Orders/default.latte
+++ b/app/UI/Orders/default.latte
@@ -17,27 +17,29 @@
                 <td>{$item['last_edited'] ? $item['last_edited']->format('d. m. Y H:i:s') : '–' }</td>
                 <td>{$item['note']}</td>
                 <td>{$item['forname']} {$item['surname']}</td>
-                <td>
-                    {$item['status']}
-                    <a n:if="$item['status_shortname'] == 'new'" n:href="OrderDetail:assignItems $item['id']">
-                        <span> </span>
-                        <button type="button">Přidělit položky</button>
-                    </a>
-                </td>
+                <td>{$item['status']}</td>
                 <td>
                     <a n:href="OrderDetail:default $item['id']"><button type="button">Detail</button></a>
-                    <a n:href="ItemsInWarehouseFull:default, 
-                                warehouse_id_cond: equal,                                  
-                                item_name_cond: equal, 
-                                item_lot_name_cond: equal, 
-                                added_date_cond: equal, 
-                                status_name_cond: equal, 
-                                order_id_cond: equal, 
-                                order_id_value: $item['id'], 
-                                filter: Filtrovat, 
-                                do: itemsListFilters-submit">
-                        <button type="button">Seznam položek</button>
-                    </a>
+                    {if $item['status_shortname'] != 'new' && $item['status_shortname'] != 'storno'}
+                        <a n:href="ItemsInWarehouseFull:default, 
+                                    warehouse_id_cond: equal,                                  
+                                    item_name_cond: equal, 
+                                    item_lot_name_cond: equal, 
+                                    added_date_cond: equal, 
+                                    status_name_cond: equal, 
+                                    order_id_cond: equal, 
+                                    order_id_value: $item['id'], 
+                                    filter: Filtrovat, 
+                                    do: itemsListFilters-submit">
+                            <button type="button">Seznam položek</button>
+                        </a>
+                    {elseif $item['status_shortname'] == 'storno'}
+                    {else}
+                        <a n:href="OrderDetail:assignItems $item['id']">
+                            <span> </span>
+                            <button type="button">Přidělit položky</button>
+                        </a>
+                    {/if}
                 </td>
             </tr>
         {/foreach}
