--- a/app/UI/ItemsLotList/default.latte
+++ b/app/UI/ItemsLotList/default.latte
@@ -37,7 +37,7 @@
         
 {include paginator from '../filters_for_table.latte', paginator:$paginator}
 
-<h4>Vytořit novou šarži</h4>
+<h4>Vytvořit novou šarži</h4>
 {control newItemLot}
 
 {/block}
